Annotate GApplication::local_command_line

Also add some documentation.
https://bugzilla.gnome.org/show_bug.cgi?id=690670